# crawlerbot-navigation

./: .gitignore  .gitmodules  README.md  cmds.sh
config/sensors/: MID360_config.json  display_point_cloud_ROS1.rviz
docs/user_manual/: .gitignore  data_recording_procedure.md  ethernet_configuration_setup.md  lidar_livox_mid-360_setup_guide.md  realsense_ros_setup_guide.md  remote_desktop.md  repo_structure.md  web_interface.md  wifi_hotspot_setup.md  wifi_setup.md
launch/: mock_web_interface.launch  record_sensors.launch  sensors_bringup.launch
scripts/: start_web_server.sh  update_subtrees.sh
src/: .gitignore
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/src/: mock_publisher.py  recording_control.py
web_interface/: index.html
web_interface/css/: styles.css
web_interface/js/: rosbridge_setup.js  sensor_visualization.js
