<?xml version="1.0"?>
<package format="2">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>The robot_control package</description>

  <maintainer email="anhrisn@gmail.com">Anhar</maintainer>
  <license>MIT</license>

  <author email="anhrisn@gmail.com">Anhar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>